<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kill Bugs</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game_start">GameStartActivity</string>
    <string name="title_activity_game">GameActivity</string>

    <string name="signing_in">Signing in with Google</string>
    <string name="signing_out">Signing out</string>
    <string name="game_title">Kill Bugs!</string>
    <string name="game_blurb">A sample game that tests your ability to click a button. Can you click faster than your friends? Only one way to find out! To play this game with friends, you must sign in with Google.</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait...</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="dismiss">Dismiss</string>
    <string name="your_score">Your score:</string>
    <string name="error">Error</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>


    <string name="your_progress_will_be_uploaded">Your existing achievements and score will be uploaded shortly.</string>
    <string name="show_achievements">Achievements</string>
    <string name="show_leaderboards">Leaderboards</string>
    <string name="achievements_not_available">Please sign in to view achievements.</string>
    <string name="leaderboards_not_available">Please sign in to view leaderboards.</string>
    <string name="achievement_level_1">Level 1</string>
    <string name="achievement_level_2">Level 2</string>
    <string name="achievement_level_3">Level 3</string>
    <string name="achievement_level_4">Level 4</string>
    <string name="achievement_level_5">Level 5</string>
    <string name="achievement_level_6">Level 6</string>
</resources>
