<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.design.widget.CoordinatorLayout-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent" android:fitsSystemWindows="true"-->
    <!--tools:context=".MainActivity">-->

    <!--<android.support.design.widget.AppBarLayout android:layout_height="wrap_content"-->
        <!--android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">-->

    <!--</android.support.design.widget.AppBarLayout>-->

    <!--<include layout="@layout/content_main" />-->

<!--</android.support.design.widget.CoordinatorLayout>-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >

    <!-- SIGN-IN SCREEN -->
    <LinearLayout android:id="@+id/screen_sign_in"
                  android:background="@drawable/background"
                  style="@style/LLScreen">
        <TextView style="@style/GameTitle" />
        <TextView style="@style/GameBlurb" />

        <Button android:id="@+id/button_single_player"
                style="@style/MainScreenButton"
                android:text="@string/single_player" />
        <com.google.android.gms.common.SignInButton android:id="@+id/button_sign_in"
                                                    style="@style/SignInButton" />
    </LinearLayout>

    <!-- MAIN SCREEN -->
    <LinearLayout android:id="@+id/screen_main" style="@style/LLScreen"
                  android:background="@drawable/background">
        <TextView style="@style/GameTitle" />
        <Button android:id="@+id/button_single_player_2"
                style="@style/MainScreenButton"
                android:text="@string/single_player" />
        <!--<TextView style="@style/MainScreenButtonBlurb"-->
                  <!--android:text="@string/single_player_explanation" />-->
        <Button android:id="@+id/button_quick_game"
                style="@style/MainScreenButton"
                android:text="@string/quick_game" />
        <!--<TextView style="@style/MainScreenButtonBlurb"-->
                  <!--android:text="@string/quick_game_explanation" />-->
        <Button android:id="@+id/button_invite_players"
                style="@style/MainScreenButton"
                android:text="@string/invite_players" />
        <!--<TextView style="@style/MainScreenButtonBlurb"-->
                  <!--android:text="@string/invite_players_explanation" />-->
        <Button android:id="@+id/button_see_invitations"
                style="@style/MainScreenButton"
                android:text="@string/see_invitations" />
        <!--<TextView style="@style/MainScreenButtonBlurb"-->
                  <!--android:text="@string/see_invitations_explanation" />-->

        <Button android:id="@+id/button_show_achievements"
                style="@style/MainScreenButton"
                android:text="@string/show_achievements" />
        <!--<TextView style="@style/MainScreenButtonBlurb"-->
                  <!--android:text="@string/see_invitations_explanation" />-->

        <Button android:id="@+id/button_show_leaderboards"
                style="@style/MainScreenButton"
                android:text="@string/show_leaderboards" />
        <!--<TextView style="@style/MainScreenButtonBlurb"-->
                  <!--android:text="@string/see_invitations_explanation" />-->

        <Button android:id="@+id/button_sign_out"
                style="@style/MainScreenButton"
                android:text="@string/sign_out" />

    </LinearLayout>

    <!-- INVITATION POPUP -->
    <LinearLayout android:id="@+id/invitation_popup" style="@style/InvPopup">
        <TextView android:id="@+id/incoming_invitation_text" style="@style/InvPopupText" />
        <Button android:id="@+id/button_accept_popup_invitation"
                style="@style/InvPopupButton"
                android:text="@string/accept_popup_invite" />
    </LinearLayout>

    <!-- "PLEASE WAIT" SCREEN -->
    <LinearLayout android:id="@+id/screen_wait" style="@style/LLScreen">
        <TextView style="@style/Blurb" android:text="@string/please_wait" />
    </LinearLayout>

    <!--GAMEPLAY SCREEN -->
    <LinearLayout android:id="@+id/screen_game" style="@style/GameScreen">
        <com.francium.app.projectf.GameGLSurfaceView
            android:id="@+id/glSurfaceViewID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>


</FrameLayout>
